# hello_world

./: Cargo.toml
.github/workflows/: run_tests.yaml
ci/: Dockerfile_hw  Dockerfile_tests  docker-compose.yml  hello-world-keypair.json  readme  start_solana.sh  start_test.sh
cli/: Cargo.toml
cli/key_pairs/: recipient0.json  recipient1.json  recipient10.json  recipient100.json  recipient1000.json  recipient10000.json  recipient10001.json  recipient10002.json  recipient10003.json  recipient10004.json  recipient10005.json  recipient10006.json  recipient10007.json  recipient10008.json  recipient10009.json  recipient1001.json  recipient10010.json  recipient10011.json  recipient10012.json  recipient10013.json  recipient10014.json  recipient10015.json  recipient10016.json  recipient10017.json  recipient10018.json  recipient10019.json  recipient1002.json  recipient10020.json  recipient10021.json  recipient10022.json  recipient10023.json  recipient10024.json  recipient10025.json  recipient10026.json  recipient10027.json  recipient10028.json  recipient10029.json  recipient1003.json  recipient10030.json  recipient10031.json  (+49961 more)
cli/src/: create_spl_transaction.rs  instructions.rs  lib.rs  main.rs  program_option.rs  transaction_data.rs  transaction_log.rs  transactions.rs
cli/src/accounts/: account_state.rs  mod.rs
cli/src/api/: allocate.rs  assign.rs  create.rs  create_send_tx.rs  deposit.rs  deposit_withdraw.rs  distribute.rs  distribute_2.rs  full_distribute.rs  internal_transfer.rs  internal_transfer_ix.rs  mod.rs  native_internal_transfer.rs  native_transfer.rs  native_transfer_from.rs  native_transfer_ix.rs  resize.rs  transfer.rs  transfer_from.rs  withdraw.rs
cli/src/context/: context.rs
cli/tests/: cli.rs  test.rs
client_side_cli/: Cargo.toml
client_side_cli/src/: deposit_transactions.rs  main.rs  program_option.rs
client_side_cli/src/program_option/: transaction_type.rs
on_chain_program/: Cargo.toml
on_chain_program/src/: config.rs  entrypoint.rs  error.rs  executor.rs  lib.rs
on_chain_program/src/accounts/: mod.rs
on_chain_program/src/api/: account.rs  allocate.rs  assign.rs  config.rs  create.rs  create_spl.rs  deposit.rs  error.rs  mod.rs  resize.rs  transfer.rs  transfer_from.rs  user_data.rs
program/: Cargo.toml
program/src/: base.rs  config.rs  entrypoint.rs  error.rs  executor.rs  lib.rs  seed.rs  state.rs
program/src/State/: mod.rs  state.rs
program/src/accounts/: account_state.rs  mod.rs
program/src/api/: allocate.rs  assign.rs  create.rs  deposit.rs  deposit_withdraw_data.rs  internal_transfer.rs  mod.rs  native_transfer.rs  native_transfer_from.rs  resize.rs  transfer.rs  transfer_from.rs  withdraw.rs
src/: executor.rs
src/api/: allocate.rs  assign.rs  create.rs  mod.rs  resize.rs  transfer.rs  transfer_from.rs
