[workspace]

members = [
    "client_side_cli",
    "on_chain_program",
]

resolver = "2"

[workspace.dependencies]
solana-sdk = "2.2.1"
solana-program-error = "2.2.2"
spl-token = { version = "8.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account-client = "2.0.0"