[package]
name = "memo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
clap = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-associated-token-account-client = { workspace = true }