[package]
name = "memo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
clap = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
async-std = { workspace = true }

hello_world = { path = "../program" }

futures-util = "0.3.31"
glob = "0.3.3"