[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
custom-heap = []


[dependencies]
solana-account-info = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-pubkey = { workspace = true }
solana-program = { workspace = true }
solana-system-interface = { workspace = true }
solana-program-error = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-associated-token-account-client = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

